Fix phone screen icon spacing

--- a/src/components/Note/NoteFooter/NoteFooter.module.scss
+++ b/src/components/Note/NoteFooter/NoteFooter.module.scss
@@ -89,7 +89,8 @@
     grid-column-gap: 30px;
 
     .stat{
-      margin-right: 6px;
+      margin-right: 2px;
+      grid-column-gap: 2px;
     }
   }
 }
